--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
       interval: "weekly"
       day: "monday"
     reviewers:
-      - "Epigos-Inc/backend"
+      - "Epigos-AI/backend"
 
   - package-ecosystem: "pip"
     directory: "/"
@@ -15,4 +15,4 @@ updates:
       interval: "weekly"
       day: "monday"
     reviewers:
-      - "Epigos-Inc/backend"
+      - "Epigos-AI/backend"
