--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: Gr1N/setup-poetry@v8
+      - uses: Gr1N/setup-poetry@v9
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pypoetry
@@ -41,6 +41,7 @@ jobs:
         run: make test
 
       - name: Upload coverage reports to Codecov with GitHub Action
+        if: ${{ matrix.python-version == '3.11' && github.actor != 'dependabot[bot]' }}
         uses: codecov/codecov-action@v4.0.1
         with:
           fail_ci_if_error: true
