--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - "main"
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release-please:
     runs-on: ubuntu-latest
@@ -12,13 +16,8 @@ jobs:
       PACKAGE_NAME: "epigos"
     steps:
       - name: release please
-        uses: google-github-actions/release-please-action@v3
+        uses: google-github-actions/release-please-action@v4
         id: release
-        with:
-          release-type: python
-          package-name: ${{ env.PACKAGE_NAME }}
-          extra-files: |
-            epigos/__version__.py
 
       - name: fetch code
         uses: actions/checkout@v4
