--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pillow = "^10.0.0"
 pybboxes = "^0.1.6"
 pyyaml = "^6.0.1"
 tqdm = "^4.66.2"
+imagesize = "^1.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.4,<9.0"
@@ -59,6 +60,7 @@ disable = [
     "C0103",
     "C0114",
     "R0903",
+    "R0913"
 ]
 
 [tool.pylint.format]
