--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -41,7 +41,7 @@ jobs:
         run: make test
 
       - name: Upload coverage reports to Codecov with GitHub Action
-        if: ${{ matrix.python-version == '3.11' && github.actor != 'dependabot[bot]' }}
+        if: ${{ matrix.python-version == '3.11' && github.actor != 'dependabot[bot]' && github.actor != 'github-actions[bot]' }}
         uses: codecov/codecov-action@v4.3.1
         with:
           fail_ci_if_error: true
