--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ black = ">=23.7,<25.0"
 isort = "^5.12.0"
 mypy = "^1.4.1"
 pytest-cov = ">=4.1,<7.0"
-pylint = ">=2.17.5,<4.0.0"
-pre-commit = "^3.3.3"
+pylint = "^3.3.4"
+pre-commit = "^4.1.0"
 autoflake = "^2.2.0"
 respx = ">=0.20.2,<0.22.0"
 types-pillow = "^10.0.0.2"
@@ -61,7 +61,8 @@ disable = [
     "C0103",
     "C0114",
     "R0903",
-    "R0913"
+    "R0913",
+    "R0917"
 ]
 
 [tool.pylint.format]
